# rotz

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
docs/docs/configuration/: templating.md
src/: cli.rs  config.rs  helpers.rs  main.rs
src/commands/: clone.rs  install.rs  link.rs
src/dot/: defaults.rs  error.rs  mod.rs
src/dot/repr/: selector.rs
src/templating/: mod.rs
src/templating/test/: mod.rs
