[package]
name = "rotz"
version = "1.2.1"
edition = "2024"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
license = "MIT"
description = "Fully cross platform dotfile manager written in rust."
repository = "https://github.com/volllly/rotz"
readme = "./README.md"
documentation = "https://docs.rs/rotz/"
keywords = ["dotfiles", "dotfiles-manager", "dotfile-manager", "cross-platform"]
categories = ["command-line-utilities"]

[features]

default = ["all-formats", "handlebars_misc_helpers/http_attohttpc"]

yaml = ["serde_yaml", "figment/yaml"]
toml = ["serde_toml", "figment/toml"]
json = ["serde_json", "figment/json"]

all-formats = ["yaml", "toml", "json"]

profiling = ["tracing", "tracing-tracy"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "color"] }
serde_yaml = { version = "0.9.34", optional = true }
serde_toml = { package = "toml", version = "1.1.2", optional = true }
serde_json = { version = "1.0.150", optional = true }
figment = { version = "0.10.19", default-features = false, features = ["env"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
crossterm = "0.29.0"
itertools = "0.15.0"
thiserror = "2.0.18"
baker = "0.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
indexmap = { version = "2.14.0", features = ["serde"] }
handlebars = "6.4.2"
handlebars_misc_helpers = { version = "0.17.0", default-features = false, features = [
    "string",
    "json",
] }
shellwords = "1.1.0"
path-absolutize = "3.1.1"
walkdir = "2.5.0"
wax = { version = "0.7.0", features = ["miette"] }
whoami = "2.1.2"
path-slash = "0.2.1"
velcro = "0.5.4"
tap = "1.0.1"
tracing = { version = "0.1.44", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
chumsky = "0.13.0"
clap_complete = "4.6.5"

[target.'cfg(windows)'.dependencies]
junction = "2.0.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.117", features = ["vendored"] }

[target.i686-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.117", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.117", features = ["vendored"] }


[dev-dependencies]
fake = { version = "5.1.0", features = ["derive"] }
rand = "0.10.1"
rstest = "0.26.1"
speculoos = "0.13.0"

[package.metadata.cross.build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = []

[package.metadata.cross.target.i686-unknown-linux-musl]
pre-build = []

[package.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = []

[lints.clippy]
all = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
cargo = { level = "warn", priority = 0 }

multiple_crate_versions = { level = "allow", priority = 1 }
use_self = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
filetype_is_file = { level = "warn", priority = 1 }
implicit_clone = { level = "warn", priority = 1 }
unneeded_field_pattern = { level = "warn", priority = 1 }
self_named_module_files = { level = "warn", priority = 1 }
str_to_string = { level = "warn", priority = 1 }
as_conversions = { level = "warn", priority = 1 }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
